--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <input class="input-task" placeholder="o que deseja adicionar?">
-        <button class="button-add-task">Adicionar</button>
+        <button class="button-add-task" onclick="adicionarTarefa()">Adicionar</button>
         <ul class="list-task">
             <li class="task">
                 <p>Casa</p>
-                <button class="button-cancelar" onclick="deletar()">x</button>
+                <button class="button-cancelar">x</button>
             </li>
         </ul>
     </div>
