--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <input class="input-task" placeholder="o que deseja adicionar?">
-        <button class="button-add-task" onclick="adicionarTarefa()">Adicionar</button>
-        <ul class="list-task">
-            <li class="task">
-                <p>Casa</p>
-                <button class="button-cancelar">x</button>
-            </li>
+        <input class="input-tarefa" placeholder="o que deseja adicionar?">
+        <button class="button-add-task" onclick="adicionar()">Adicionar</button>
+        <ul class="lista">
+            
         </ul>
     </div>
 
